--- a/login/index.html
+++ b/login/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/media-queries.css">
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -19,21 +20,25 @@
             </div>
 
             <div id="formularioid">
-                <form action="cad.php" method="post">
+
+                <h1>Login</h1>
+
+                <form action="cad.php" method="post" autocomplete="on">
 
                     <label for="emailid"><span class="material-symbols-outlined">person</span></label>
                     
-                    <input type="email" class="data" id="emailid" required>
+                    <input type="email" class="data" id="emailid" placeholder="E-mail" autocomplete="email" maxlength="30" >
+
+                    <br>
 
                     <label for="passwordid"><span class="material-symbols-outlined">key</span> </label>
 
-                    <input type="password" class="data" id="passwordid" required>
+                    <input type="password" class="data" id="passwordid" placeholder="Senha" autocomplete="current-password" minlength="8" maxlength="30">
 
 
                     <button class="btnforgot">Esqueci a senha :(</button>
-
-
-                    <input type="submit" value="Enviar!" class="btn">
+                    
+                    <input type="submit" value="Entrar!" class="btn">
 
                 </form>
             </div>
