--- a/login/index.html
+++ b/login/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Screen</title>
+    <title>Hello World!</title>
+
+    <!-- ICON -->
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 
     <!-- STYLES|CSS -->
     <link rel="stylesheet" href="style/style.css">
