sign up screen: media queries fixed

--- a/login/criarconta.html
+++ b/login/criarconta.html
@@ -12,7 +12,7 @@
     
     <main>
         <h2>Olá, seja bem vindo ao <span>Hello World</span></h2>
-        <form action="POST">
+        <form action="a.php" method="post" autocomplete="on">
             
             <label for="usernameid">Nome de usuário:</label>
             <input type="text" name="" id="usernameid" placeholder="Defina aqui um nome de usuário">
