--- a/authentication/sign-in.html
+++ b/authentication/sign-in.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 
     <!-- STYLES|CSS -->
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/media-queries.css">
+    <link rel="stylesheet" href="../style/login-screen.css">
+    <link rel="stylesheet" href="../style/login-screen-media-queries.css">
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
     
