first try on backend
i didnt lose, im closest to winning

--- a/authentication/sign-in.html
+++ b/authentication/sign-in.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 
     <!-- STYLES|CSS -->
-    <link rel="stylesheet" href="../style/login-screen.css">
-    <link rel="stylesheet" href="../style/login-screen-media-queries.css">
+    <link rel="stylesheet" href="..//style/login-screen.css">
+    <link rel="stylesheet" href="..//style/login-screen-media-queries.css">
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
     
@@ -22,7 +22,7 @@
             <article id="astronaut-image"></article>
 
             <article id="form-article">
-                <form autocomplete="on">
+                <form name="sign-in-form">
                     <h1>Login</h1>
                     <div id="input-area">
                         <div id="email-area">
