--- a/authentication/sign-up.html
+++ b/authentication/sign-up.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="../style/sign-up-screen.css">
-    <link rel="stylesheet" href="../style/sign-up-screen-media-queries.css">
+    <link rel="stylesheet" href="..//style/sign-up-screen.css">
+    <link rel="stylesheet" href="..//style/sign-up-screen-media-queries.css">
 </head>
 <body>
     
     <main>
         <h2>Olá, seja bem vindo ao <span>Hello World</span></h2>
-        <form action="a.php" method="post" autocomplete="on">
+        <form action="a.php" method="post" name="sign-up-form">
             
             <label for="usernameid">Nome de usuário:</label>
             <input type="text" name="sign-up-username" id="usernameid" placeholder="Defina aqui um nome de usuário">
